k8s/user-service/user-service-direct-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-direct-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: user-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3000
